fixed white space on right

--- a/src/components/Navbar/HeaderNavbar.module.css
+++ b/src/components/Navbar/HeaderNavbar.module.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    padding: 2rem;
 }
 
 .headerNavList {
